# TensorRTAndOpenVino

./: CMakeLists.txt  README.md  convert.py  server.py  start.sh
include/: buffers.h  camera.h  configMade.h  core.h  detection.h  measure.h  ocr.h  qrcode.h
src/: camera.cpp  core.cpp  detection.cpp  measure.cpp  ocr.cpp  qrcode.cpp
